tests/Tuc/Fixtures/errors/MethodCalledWithoutACaller.tuc
tuc parse error test
participants
    Service parts

Service.Method
